--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,60 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+  <!--scripts for meta tags and autocomplete-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>County Comparator</title>
+    
+     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />  
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>  
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!--CSS autocomplete-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/token-input.css') }}" />
+    
+    <!-- end of Meta tags and autocomplete-->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!--CSS-->
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+   
+   <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <!-- D3 JS -->
+    
+    <!-- JS  -->
+    <!--Ecos-Meakin--><script src="{{ url_for('static', filename='js/app.js') }}" defer></script>
+    <!--Maps-Sly-->  <script  src="{{ url_for('static', filename='js/logic.js') }}" defer></script>
+
+    <!-- D3 JS -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
 
     <!-- Plotly JS -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- JS and CSS-->
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-    <script src="{{ url_for('static', filename='js/app.js') }}" defer></script>
+    <link rel="shortcut icon" type="image/jpg" href="{{ url_for('static', filename='Images/favicon.jpg') }}"/>
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
     
-
-
-  <title>City Comparator!</title>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.0/mapbox-gl.css" rel="stylesheet" />
+    
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+    <!-- API key -->
+    <script type="text/javascript" src="static/js/config.js" defer></script>
+    
   </head>
   <body>
     <!--Start of Nav Bar-->  
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">TEAM LOGIC</a>
+      <img src="{{ url_for('static', filename='Images/logo.jpg')}}" class="img-logo" alt="..."><br> 
+      <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,88 +64,79 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Maps</a>
+            <a class="nav-link" href="maps.html">Maps</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Data</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown link
+              Options
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Income/Expenditures</a>
+              <a class="dropdown-item" href="#">Home Prices</a>
+              <a class="dropdown-item" href="#">Crime Rate</a>
+              <a class="dropdown-item" href="#">School Rating</a>
+              <a class="dropdown-item" href="#">Reviews</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
     <!--End of Nav Bar-->
-    <!--start of jumbotron code-->
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4 text-dark">City Comparator</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <!--Start of Jumbotron-->
+     <!--start of jumbotron code-->
+     <div class="jumbotron jumbotron-fluid">
+      <div class="container fluid">
+        <h1 class="display-4 text-dark">County Comparator</h1>
+        <p class="lead">Your guide for your next Big Move</p>
         <div class="container fluid">
-          <!--Start of search for city 1-->
-          <div class="row">
-            <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
+          <!--Start of autocpmplete search -->
+          
+          <?php
+          if(isset($_POST['submit'])){
+              // Get selected counties
+              $selected_counties_ids = $_POST['county_input'];
+          
+          echo $selected_counties_ids;
+          }
+          ?>
 
-            <div class="col-6"><input type="search" id="city1" class="form-control" placeholder="In which city do you live?" />
-
-              <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
-              <script>
-              (function() {
-                var placesAutocomplete = places({
-                  appId: '<YOUR_PLACES_APP_ID>',
-                  apiKey: '<YOUR_PLACES_API_KEY>',
-                  container: document.querySelector('#city1'),
-                  templates: {
-                    value: function(suggestion) {
-                      return suggestion.name;
-                    }
-                  }
-                }).configure({
-                  type: 'city',
-                  aroundLatLngViaIP: false,
-                });
-              })();
-              </script>
-            </div>
-            <!--End of search for city 1 and start of search for city 2-->
-            <div class="col-6"><input type="search" id="city2" class="form-control" placeholder="In which city do you live?" />
-
-              <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
-              <script>
-              (function() {
-                var placesAutocomplete = places({
-                  appId: '<YOUR_PLACES_APP_ID>',
-                  apiKey: '<YOUR_PLACES_API_KEY>',
-                  container: document.querySelector('#city2'),
-                  templates: {
-                    value: function(suggestion) {
-                      return suggestion.name;
-                    }
-                  }
-                }).configure({
-                  type: 'city',
-                  aroundLatLngViaIP: false,
-                });
-              })();
-              </script>
-              </div>
+        <div class="row">
+          <div class="col-9">
+            <form method="GET" action="">
+              <p><h4>Select Two Counties</h4></p>
+              <input type="text" name="county_input" id="county_input" class="form-control"/><br/>
+              <input id='submit' type="button" name="submit" value="SUBMIT" class="btn btn-success">
+            </form>
+          </div>
+      <!-- Tokeninput plugin library -->
+        <script src= "{{ url_for('static', filename='js/jquery.tokeninput.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/counties.js') }}"></script>
+        <script> var counties = counties
+       $(document).ready(function() {
+          $("#county_input").tokenInput(counties);
+        });
+        </script>     
+                <div class="col-3">
+                <select class="custom-select" multiple>
+                <option selected>Select Option</option>
+                <option value="1">Income/Expenditure</option>
+                <option value="2">Home Prices</option>
+                <option value="3">Crime Rate</option>
+                <option value="3">School Rating</option>
+              </select> </div>
           </div>
         </div>
       </div>
     </div>
-    <!--end of jumbotron code and search for city 2-->
+    <!--end of jumbotron code and autocomplete search-->
     <!--Start of container div-->
   <div class="container fluid">
     <div class="row">
-      <div class="col-10" id="myDiv" style="width:100%;height:500;">This is row for city one bar chart </div>
-      <!-- <div class="col-5">This is row for city two bar chart</div> -->
+      <div class="col-10" id="ecosplot">This is row for city one bar chart </div>
+      <!--<div class="col-5">This is row for city two bar chart</div>-->
       <div class="col-2"><div class="card" style="width: 18rem;">
         <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
         <div class="card-body">
@@ -124,8 +145,8 @@
       </div></div>
     </div>
     <div class="row">
-      <div class="col-5">This is row for city one bar chart </div>
-      <div class="col-5">This is row for city two bar chart</div>
+      <div class="col-5 map-container" id="map">This is row for city one bar chart </div>
+      <div class="col-5 map-container" id="map-county1" >This is row for city two bar chart</div>
       <div class="col-2"><div class="card" style="width: 18rem;">
         <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
         <div class="card-body">
@@ -134,19 +155,5 @@
       </div></div>
     </div>
   </div>
-
-  
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-    -->
-  </body>
+ </body>
 </html>
